--- a/zs-pod.yml
+++ b/zs-pod.yml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: zero-scaler
+  labels:
+    app: zero-scaler
 spec:
   containers:
     - name:  zero-scaler
-      image: semars/k8s-zero-scaler:latest
+      image: semars/k8s-zero-scaler:6.0.0
+      ports:
+        - containerPort: 8080
       env:
       - name: SENTINELS
         value: sentinel-0.sentinel.redis.svc.cluster.local:5000,sentinel-1.sentinel.redis.svc.cluster.local:5000,sentinel-2.sentinel.redis.svc.cluster.local:5000
@@ -21,4 +25,15 @@ spec:
         value: $(REDIS)
       - name: REDIS_MASTER_NAME
         value: mymaster
-
+     
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zero-scaler-svc
+spec:
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: zero-scaler
